Add tests for cart and cart details

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.profiles.active=jpadao
+spring.datasource.hikari.maximum-pool-size=20
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG 
+logging.level.com.zaxxer.hikari=TRACE
 
