Add Address embeddable domain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.profiles.active=jpadao
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+
 spring.datasource.hikari.maximum-pool-size=20
-logging.level.com.zaxxer.hikari.HikariConfig=DEBUG 
+logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
 logging.level.com.zaxxer.hikari=TRACE
+
 
